traefik-middleware.yaml
# traefik授权
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: traefik-auth
  namespace: kube-system
spec:
  basicAuth:
    secret: authsecret
---

apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: del-api
  namespace: kube-system
spec:
  stripPrefix:
    prefixes:
      - /api
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: global-http-to-https
spec:
  entryPoints:
    - web
  routes:
    - match: PathPrefix(`/`)
      priority: 1000
      kind: Rule
      services:
        - kind: TraefikService
          name: noop@internal
      middlewares:
        - name: global-http-to-https
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: global-http-to-https
spec:
  redirectScheme:
    scheme: https
    permanent: true
